--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,6 @@
         "**/Thumbs.db": true,
 
         "node_modules": true,
-        "**/*.css.map": true,
-        "**/*.css": true
+        "**/*.css.map": true
     }
 }
