--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "i9nn.com",
-  "version": "1.0.0",
-  "description": "My website for my programming portfolio and interests. A test in HTML and CSS designed to help me understand some of the main concepts a little bit more.\r Please feel free to poke around.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "stylelint": "^15.10.2",
-    "stylelint-config-standard": "^34.0.0",
-    "stylelint-config-standard-scss": "^10.0.0"
-  }
+    "name": "web-skeleton",
+    "version": "1.0.0",
+    "description": "A basic skeleton for creating websites with a Sass-TypeScript toolchain.",
+    "main": "index.js",
+    "scripts": {
+        "lint-scss": "npx stylelint \"**/*.scss\"",
+        "lint-tsc": "npx eslint .",
+        "tsc": "tsc --watch"
+    },
+    "author": "Ian Gaunt",
+    "license": "MIT",
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^6.6.0",
+        "@typescript-eslint/parser": "^6.6.0",
+        "eslint": "^8.49.0",
+        "stylelint": "^15.10.3",
+        "stylelint-config-standard-scss": "^11.0.0",
+        "typescript": "^5.2.2"
+    }
 }
